<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">SMSTester</string>
	<string name="welcome">\n\nThis app allows you to send and receive SMS messages in an automated, repeatable manner while logging as much metadata as possible.\n\nThe messages are sent from the keywords list.\n\nUse the menu options to start or configure the sending process\n\nAll log data is stored as csv files in the sdcard under the \'smstester\' folder.\n\n</string>
	<string name="pref_default_recipient_title">Default Recipient</string>
	<string name="pref_default_recipient_dialogtitle">Default Recipient, for example: +12225551212</string><string name="pref_default_recipient_summary">Default phone number to send msgs to</string>
	<string name="pref_log_base_path_title">Log Storage Folder</string>
	<string name="pref_log_base_path_summary">Where to store the log files</string>
	<string name="pref_time_delay_title">Time Delay (ms)</string>
	<string name="pref_time_delay_summary">Delay between messages, in milliseconds (default: 1000 ms)</string>
	<string name="pref_use_data_title">Use Data Port</string>
	<string name="pref_use_data_summary">Send SMS as data messages not text</string>
	<string name="pref_use_tracking_title">Add tracking metadata</string>
	<string name="pref_use_tracking_summary">Append tracking metadata to message for better analytics</string>
	<string name="pref_run_continuously_title">Run Continuously</string>
	<string name="pref_run_continuously_summary">Keep running the test until I stop it</string>
	
	<string name="start_sms_prompt_title">Start SMS Test</string>
	<string name="start_sms_prompt_message">Enter target phone number for test messages:</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="settings">Settings</string>
	<string name="about">About</string>
	<string name="about_message">SMSTester: %s\nLearn more at: http://safermobile.org</string>
	<string name="sending_title">Sending:</string>	
	<string name="request_send_message">Requesting permission to send test messages.</string>
	<string name="allow_deny_message">The recipient accepted your request, starting to send test messages.</string>
	<string name="deny_send_message">The recipient denied your request, canceling.</string>
	<string name="sending_header">Sending the header message to describe data format.</string>
	<string name="sending_message">sending message:</string>
	<string name="refresh">Refresh</string>
	<string name="rotate_log">Rotate Log</string>
	<string name="error_sms_log">Error setting up SMS Log:</string>
</resources>
