<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<EditTextPreference android:key="pref_default_recipient"
		android:title="@string/pref_default_recipient_title"
		android:inputType="phone" android:summary="@string/pref_default_recipient_summary"
		android:dialogTitle="@string/pref_default_recipient_dialogtitle" />

	<EditTextPreference android:key="pref_log_base_path"
		android:title="@string/pref_log_base_path_title" android:inputType="textNoSuggestions"
		android:summary="@string/pref_log_base_path_summary" />

	<EditTextPreference android:key="pref_time_delay"
		android:defaultValue="1000" android:title="@string/pref_time_delay_title"
		android:inputType="number" android:summary="@string/pref_time_delay_summary" />

	<CheckBoxPreference android:defaultValue="false"
		android:key="pref_use_data" android:title="@string/pref_use_data_title"
		android:summary="@string/pref_use_data_summary" />

	<CheckBoxPreference android:defaultValue="true"
		android:key="pref_use_tracking" android:title="@string/pref_use_tracking_title"
		android:summary="@string/pref_use_tracking_summary" />

	<CheckBoxPreference android:defaultValue="false"
		android:key="pref_run_continuously" android:title="@string/pref_run_continuously_title"
		android:summary="@string/pref_run_continuously_summary" />

</PreferenceScreen>
